--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "justreddit",
-    "version": "3.0.0",
+    "version": "3.0.4",
     "description": "A simple package for getting random posts, images, or subreddits via the reddit api.",
     "main": "lib/index.js",
     "types": "lib/index.d.ts",
@@ -33,14 +33,14 @@
     },
     "license": "MIT",
     "dependencies": {
-        "node-fetch": "^2.6.7",
-        "ts-jest": "^28.0.2"
+        "node-fetch": "^2.6.7"
     },
     "devDependencies": {
         "@types/jest": "^27.5.1",
         "@types/node": "^17.0.35",
         "@types/node-fetch": "^2.6.1",
         "jest": "^28.1.0",
+        "ts-jest": "^28.0.2",
         "tslint": "^6.1.3",
         "typescript": "^4.6.4"
     }
